--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('https://static1.patasdacasa.com.br/articles/7/18/77/@/8819-gato-deitado-em-cima-do-notebook-pode-se-articles_media_mobile-1.jpg');
+    background-image: url('https://i.pinimg.com/originals/89/de/2b/89de2b297f46af7b1b0d41ff166e839e.png');
     min-height: 625px;
     background-position: center;
     background-repeat: no-repeat;
