--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,6 +1,6 @@
 #img-bg{
-    background-image: url('https://www.petlove.com.br/dicas/wp-content/uploads/2019/06/shutterstock_593415155-1280x720.jpg');
-    min-height: 620px;
+    background-image: url('https://i.pinimg.com/originals/f1/c2/91/f1c29137436738055d6a8003343cf88c.jpg');
+    min-height: 625px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
