--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,12 +7,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active">
-        <img src="https://i.imgur.com/8FxqjAc.png" alt="gatinho" width="50px"
+        <img src="{{foto}}" alt="foto de perfil" width="50px"
           height="50px" class="img-fluid rounded-circle">
       </li>
+
       <li class="nav-item pl-3">
-        <p class="m-0 font-weight-bold text-white fs-16">Nome do usuario</p>
+        <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
       </li>
+      
       <li class="nav-item pl-3">
         <a href=""><i class="fa fa-pencil-square-o text-white fs-16" aria-hidden="true"></i></a>
       </li>
@@ -20,7 +22,7 @@
 
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-3">
-        <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
+        <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
         </a>
       </li>
     </ul>
