--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-sm bg pt-4">
+<footer class="page-footer font-sm bg pt-2">
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
@@ -15,8 +15,8 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright bg-dark text-center py-1">
+    <!-- <div class="footer-copyright bg-dark text-center py-1">
         <h6 class="text-white pt-2">Creditos da imagem do perfil: <a href='https://.pngtree.com/so/Ilustração'>Ilustração png de .pngtree.com/</a></h6>
         
-    </div>
+    </div> -->
 </footer>
