--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,7 +16,7 @@
       </li>
       
       <li class="nav-item pl-3">
-        <a href=""><i class="fa fa-pencil-square-o text-white fs-16" aria-hidden="true"></i></a>
+        <a [routerLink]="['/user-edit', id] "><i class="fa fa-pencil-square-o text-white fs-16" aria-hidden="true"></i></a>
       </li>
     </ul>
 
